Finish 3 column features.

--- a/style.css
+++ b/style.css
@@ -145,6 +145,11 @@
   .wrapper {
     width: min(calc(100% - 48px), calc(1200 / 16 * 1rem));
     margin-inline: auto;
+    padding-block: 60px;
+
+    @media (width >= calc(1000 / 16 * 1rem)) {
+      padding-block: 80px;
+    }
   }
 }
 
@@ -259,7 +264,7 @@
       width: calc(200 / 16 * 1rem);
       margin-block-end: 40px;
       justify-self: center;
-      
+
       @media (width >= calc(600 / 16 * 1rem)) {
         width: calc(483 / 16 * 1rem);
       }
@@ -290,6 +295,42 @@
     .hero__buttons {
       display: flex;
       gap: 20px;
+    }
+  }
+
+  .features {
+    .features__wrapper {
+      display: grid;
+      gap: 40px;
+      justify-items: center;
+
+      @media (width >= calc(1000 / 16 * 1rem)) {
+        grid-template-columns: repeat(3, 1fr);
+      }
+    }
+
+    .features__item {
+      display: grid;
+      grid-auto-rows: min-content;
+      gap: 10px;
+
+      @media (width < calc(1000 / 16 * 1rem)) {
+        justify-items: center;
+        text-align: center;
+      }
+    }
+
+    .features__icon {
+      width: auto;
+      height: calc(48 / 16 * 1rem);
+    }
+
+    .features__title {
+      line-height: 1;
+    }
+
+    .features__description {
+      max-width: 40ch;
     }
   }
 }
