--- a/style.css
+++ b/style.css
@@ -66,12 +66,20 @@
     --color-button-primary-boder: var(--c-teal);
     --color-button-primary-border-hover: var(--c-teal-dark);
     --color-button-primary-text: var(--c-gray-dark);
+    --color-button-primary-white-bg: var(--c-white);
+    --color-button-primary-white-bg-hover: var(--c-teal);
+    --color-button-primary-white-boder: var(--c-white);
+    --color-button-primary-white-border-hover: var(--c-teal);
+    --color-button-primary-white-text: var(--c-gray-dark);
     --color-button-secondary-bg: var(--c-transparent);
     --color-button-secondary-bg-hover: var(--c-white);
     --color-button-secondary-border: var(--c-white);
     --color-button-secondary-text: var(--c-white);
     --color-button-secondary-text-hover: var(--color-hero-bg);
     --color-fullwidth-bg: var(--c-magenta);
+    --color-cta-gradient1: var(--c-gray-dark);
+    --color-cta-gradient2: var(--c-purple);
+    --color-cta-gradient3: var(--c-teal);
   }
 
   *,
@@ -156,6 +164,24 @@
       padding-block: 80px;
     }
   }
+
+  .fullwidth {
+    text-align: center;
+
+    .fullwidth__wrapper {
+      display: grid;
+      justify-items: center;
+    }
+
+    .fullwidth__title {
+      margin-block-end: 20px;
+    }
+
+    .fullwidth__description {
+      max-width: 80ch;
+      margin-block-end: 40px;
+    }
+  }
 }
 
 @layer component {
@@ -179,6 +205,17 @@
       &:hover {
         background-color: var(--color-button-primary-bg-hover);
         border-color: var(--color-button-primary-border-hover);
+      }
+
+      &.white {
+        background-color: var(--color-button-primary-white-bg);
+        color: var(--color-button-primary-white-text);
+        border: 2px solid var(--color-button-primary-white-border);
+
+        &:hover {
+          background-color: var(--color-button-primary-white-bg-hover);
+          border-color: var(--color-button-primary-white-border-hover);
+        }
       }
     }
 
@@ -342,21 +379,6 @@
   .fw-feature {
     background-color: var(--color-fullwidth-bg);
     color: var(--color-text-light);
-    text-align: center;
-
-    .fw-feature__wrapper {
-      display: grid;
-      justify-items: center;
-    }
-
-    .fw-feature__title {
-      margin-block-end: 20px;
-    }
-
-    .fw-feature__description {
-      max-width: 80ch;
-      margin-block-end: 40px;
-    }
 
     .fw-feature__image {
       width: 100%;
@@ -401,7 +423,7 @@
       gap: 20px 30px;
       align-items: center;
       text-align: center;
-      
+
       @media (width >= calc(600 / 16 * 1rem)) {
         flex-direction: row;
         text-align: left;
@@ -415,6 +437,34 @@
 
     .testimonial__author-description {
       font-size: var(--font-size-quote-author);
+    }
+  }
+
+  .fw-cta {
+    background: linear-gradient(
+      to right,
+      var(--color-cta-gradient1),
+      var(--color-cta-gradient2) 55%,
+      var(--color-cta-gradient3) 110%
+    );
+    color: var(--color-text-light);
+
+    @media (width >= calc(1000 / 16 * 1rem)) {
+      background: linear-gradient(
+        to right,
+        var(--color-cta-gradient1),
+        var(--color-cta-gradient2) 75%,
+        var(--color-cta-gradient3) 150%
+      );
+    }
+
+    .fw-cta__wrapper {
+    }
+
+    .fw-cta__title {
+    }
+
+    .fw-cta__description {
     }
   }
 }
