--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@
     --font-size-pre-title: var(--fs-20);
     --font-size-quote: var(--fs-24);
     --font-size-quote-author: var(--fs-20);
+    --font-size-form: var(--fs-18);
 
     @media (width >= calc(600 / 16 * 1rem)) {
       --font-size-topnav: var(--fs-16);
@@ -187,6 +188,14 @@
     height: auto;
   }
 
+  input,
+  button,
+  textarea,
+  select {
+    font: inherit;
+    border: none;
+  }
+
   header ul,
   footer ul {
     list-style-type: none;
@@ -266,6 +275,35 @@
         background-color: var(--color-button-secondary-bg-hover);
         color: var(--color-button-secondary-text-hover);
       }
+    }
+  }
+
+  .form {
+    display: flex;
+    gap: 16px;
+    flex-wrap: wrap;
+
+    .form__label,
+    .form__text {
+      font-size: var(--fs-18);
+      line-height: 1;
+    }
+
+    .form__label {
+      display: inline-block;
+      font-weight: 700;
+      flex: 100%;
+      text-align: left;
+    }
+
+    .form__text {
+      padding: 8px 20px;
+      border-radius: 5px;
+      flex: 3;
+    }
+
+    .form__button {
+      flex: 1;
     }
   }
 
