Finish hamburger menu.

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
     --fs-48: calc(48 / 16 * 1rem);
     --fs-72: calc(72 / 16 * 1rem);
 
-    --font-size-topnav: var(--fs-14);
+    --font-size-topnav: var(--fs-20);
     --font-size-h1: clamp(2.625rem, 1.5rem + 4.8vw, 4.5rem);
     --font-size-h2: var(--fs-36);
     --font-size-h3: var(--fs-24);
@@ -58,6 +58,7 @@
     --c-gray-dark: hsl(233, 14%, 25%);
     --c-gray-dark-40: hsl(233, 14%, 25%, 40%);
     --c-purple: hsl(232, 58%, 55%);
+    --c-purple-dark-60: hsl(232, 58%, 35%, 60%);
     --c-teal: hsl(180, 100%, 42%);
     --c-teal-dark: hsl(180, 100%, 37%);
     --c-transparent: transparent;
@@ -70,6 +71,9 @@
     --color-text-light: var(--c-white);
     --color-text-link: var(--c-magenta);
     --color-header-bg: var(--c-purple);
+    --color-topnav-menu-bg: var(--c-purple);
+    --color-topnav-menu-shadow: var(--c-purple-dark-60);
+    --color-topnav-menu-overlay: var(--c-gray-dark-40);
     --color-topnav-gradient-1: var(--c-teal);
     --color-topnav-gradient-2: var(--c-yellow);
     --color-hero-bg: var(--c-purple);
@@ -194,6 +198,8 @@
   select {
     font: inherit;
     border: none;
+    padding: 0;
+    background: none;
   }
 
   header ul,
@@ -300,6 +306,7 @@
       padding: 8px 20px;
       border-radius: 5px;
       flex: 3;
+      background-color: var(--color-main-bg);
     }
 
     .form__button {
@@ -308,6 +315,9 @@
   }
 
   .topnav {
+    position: sticky;
+    top: 0;
+    z-index: 10;
     background-color: var(--color-header-bg);
 
     .topnav__wrapper {
@@ -321,9 +331,6 @@
       }
     }
 
-    .topnav__homelink {
-    }
-
     .topnav__logo {
       width: calc(70 / 16 * 1rem);
 
@@ -332,24 +339,103 @@
       }
     }
 
-    .topnav__links {
-      display: flex;
-      gap: 20px;
+    .topnav__overlay {
+      opacity: 0;
 
-      @media (width >= calc(600 / 16 * 1rem)) {
-        gap: 40px;
+      @media (width < calc(600 / 16 * 1rem)) {
+        position: fixed;
+        inset: 0;
+        background-color: var(--color-topnav-menu-overlay);
+        pointer-events: none;
+        transition: opacity 250ms ease-in-out;
+
+        &:has(+ .topnav__open[aria-expanded="true"]) {
+          opacity: 1;
+          pointer-events: all;
+        }
       }
     }
 
-    .topnav__item {
+    .topnav__open,
+    .topnav__close {
+      display: none;
+
+      @media (width < calc(600 / 16 * 1rem)) {
+        display: block;
+      }
+    }
+
+    .topnav__open {
+      &[aria-expanded="true"] {
+        + .topnav__menu {
+          translate: 0 0;
+
+          @media (prefers-reduced-motion) {
+            opacity: 1;
+          }
+        }
+      }
+    }
+
+    .topnav__menu {
+      @media (width < calc(600 / 16 * 1rem)) {
+        position: fixed;
+        inset: 0 0 auto 0;
+        background-color: var(--color-topnav-menu-bg);
+        padding: 12px 24px 120px;
+        border-radius: 0 0 20px 20px;
+        box-shadow: 0 12px 12px var(--c-purple-dark-60);
+        translate: 0 -110%;
+
+        &.animating {
+          transition: translate 250ms ease-in-out;
+
+          @media (prefers-reduced-motion) {
+            transition-property: opacity;
+          }
+        }
+
+        @media (prefers-reduced-motion) {
+          translate: 0;
+          opacity: 0;
+        }
+      }
+    }
+
+    .topnav__close {
+      margin-inline-start: auto;
+    }
+
+    .topnav__links {
+      display: flex;
+      gap: 40px;
+
+      @media (width < calc(600 / 16 * 1rem)) {
+        flex-direction: column;
+        align-items: center;
+        margin-block-start: 84px;
+      }
+    }
+
+    .topnav__item:first-child {
+      display: none;
+
+      @media (width < calc(600 / 16 * 1rem)) {
+        display: block;
+      }
     }
 
     .topnav__link {
       font-size: var(--font-size-topnav);
       font-weight: 700;
+      line-height: 1;
       letter-spacing: 0.05em;
       text-transform: uppercase;
       color: var(--color-text-light);
+
+      @media (width < calc(600 / 16 * 1rem)) {
+        text-transform: none;
+      }
 
       &::after {
         content: "";
@@ -403,9 +489,6 @@
         margin-block-end: 0;
         justify-self: end;
       }
-    }
-
-    .hero__text {
     }
 
     .hero__title {
@@ -510,9 +593,6 @@
       }
     }
 
-    .alt-features__text {
-    }
-
     .alt-features__title {
       line-height: 1;
       margin-block-end: 10px;
@@ -523,9 +603,6 @@
       font-size: var(--font-size-pre-title);
       text-transform: uppercase;
       margin-block-end: 10px;
-    }
-
-    .alt-features__description {
     }
   }
 
@@ -542,9 +619,6 @@
 
     background-color: var(--color-bg);
     color: var(--color-text);
-
-    .testimonial__wrapper {
-    }
 
     .testimonial__figure {
       @media (width >= calc(1000 / 16 * 1rem)) {
@@ -638,9 +712,6 @@
   }
 
   .blog {
-    .blog__wrapper {
-    }
-
     .blog__title {
       text-align: center;
       margin-block-end: 40px;
@@ -696,9 +767,6 @@
       box-shadow: 0 4px 10px var(--color-blog-shadow);
     }
 
-    .blog__post-title {
-    }
-
     .blog__post-link {
       color: var(--color-text-dark);
       transition: color 150ms ease-in-out;
@@ -706,9 +774,6 @@
       &:hover {
         color: var(--color-blog-link-hover);
       }
-    }
-
-    .blog__post-description {
     }
 
     .blog__post-meta {
@@ -722,9 +787,6 @@
 
     .blog__post-datetime {
       text-transform: uppercase;
-    }
-
-    .blog__post-readtime {
     }
   }
 
@@ -744,15 +806,6 @@
         var(--color-cta-gradient2) 75%,
         var(--color-cta-gradient3) 150%
       );
-    }
-
-    .fw-cta__wrapper {
-    }
-
-    .fw-cta__title {
-    }
-
-    .fw-cta__description {
     }
   }
 
@@ -781,12 +834,6 @@
       margin-block-end: 10px;
     }
 
-    .footer__copyright {
-    }
-
-    .footer__column {
-    }
-
     .footer__title {
       font-size: calc(22 / 16 * 1rem);
       margin-block-end: 6px;
@@ -795,9 +842,6 @@
     .footer__links {
       display: grid;
       gap: 6px;
-    }
-
-    .footer__item {
     }
 
     .footer__link {
@@ -844,6 +888,7 @@
       background: #fff;
       padding: 10px;
       border: 1px solid;
+      z-index: 20;
     }
   }
 
